<resources>
    <string name="app_name">TripTogether</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_nick">Apelido</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_local">Local</string>

    <string name="ID_file_key">com.teca.triptogether.idlogin</string>
    <string name="action_sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quemPagou">Quem Pagou</string>
    <string name="quemUsou">quem usou</string>
    <string name="DescPT">Descrição</string>
    <string name="addPT">adicionar</string>
    <string name="logarPT">LOGAR</string>
    <string name="textRegPT">Não é cadastrado?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_cria_viagem">CriaViagemActivity</string>
    <string name="title_activity_add_integrante">AddIntegranteActivity</string>
    <string name="prompt_integrante">Email do Integrante</string>
    <string name="ID_VIAGEM_file_key">com.teca.triptogether.idviagem</string>
    <string name="valorPT">valor</string>
</resources>
