<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teca.dudu.triptogether.activity.AddDespesaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc_text"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/DescPT" />
            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/categorias_btn"
                android:drawableLeft="@mipmap/ic_diversos72"
                android:background="#FAFAFA"
                android:layout_gravity="center"
                android:textColor="#004C00"
                android:layout_weight="0.27" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:background="#FAFAFA"
                    android:textColor="#004A00"
                    android:id="@+id/moeda_btn"
                    android:textSize="20dp"
                    android:text="$"/>

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/valor_text"
                    android:layout_weight="0.45"
                    android:hint="@string/valorPT" />


            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="0.45">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quemUsou"
                    android:id="@+id/quemusou_btn"
                    android:gravity="center|left"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="50dp" />

            </RelativeLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:id="@+id/listview_quemusou"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addPT"
                android:id="@+id/add_despesa_btn"
                android:layout_gravity="center_horizontal"
                 />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
